appId: dev.srsouza.pokedex
---
- launchApp
- tapOn: "Pokemon List"
- tapOn: "bulbasaur"
- assertVisible: "Weight:"
- assertVisible: "69"
- assertVisible: "Grass"
- assertVisible: "Poison"